@@ -6,9 +6,6 @@ $Id$
 
 -------------------------------------------------------------------------------
 
-* Issues for release 1.3.0:
-  - Take broadcast MAC address to register the first ethernet device.
-
 * Future features:
   - Interface/buffers for asynchronous domain IO.
   - Distributed clocks.
